# Kutinf-beadand-Fold-Hold

./: CMakeLists.txt
doc/: CMakeLists.txt  eredmenyek.png.in  euler_project.tex
futtatas/: CMakeLists.txt  Euler.c  Euler.hpp  Euler.hpp.in
plotter/: CMakeLists.txt  CmakeLists.cmake  eulerplot.p
